<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_page_register"
        android:textSize="22sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/login_page_server_addr"
            android:textColor="@color/foreground"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_server_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_box"
            android:paddingHorizontal="12dp"
            android:paddingVertical="14dp"
            android:hint="@string/login_page_server_addr_desc"
            android:importantForAutofill="no"
            android:textColor="@color/foreground"
            android:textSize="14sp"
            android:inputType="textUri" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/login_page_username"
            android:textColor="@color/foreground"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_box"
            android:paddingHorizontal="12dp"
            android:paddingVertical="14dp"
            android:hint="@string/login_page_username_desc"
            android:textColor="@color/foreground"
            android:textSize="14sp"
            android:autofillHints="username"
            android:inputType="textVisiblePassword|textNoSuggestions" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/login_page_password"
            android:textColor="@color/foreground"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_box"
            android:paddingHorizontal="12dp"
            android:paddingVertical="14dp"
            android:hint="@string/login_page_password_desc"
            android:textColor="@color/foreground"
            android:textSize="14sp"
            android:autofillHints="password"
            android:inputType="textPassword|textNoSuggestions" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="36dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_more_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/login_offline"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="204dp"
                android:layout_height="36dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorAccentTransparent"
                android:backgroundTintMode="src_atop"
                android:foregroundTint="@color/colorAccent"
                android:text="@string/button_offline_login"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <ImageButton
                android:id="@+id/help_login_button"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_awesome_question"
                android:backgroundTint="@color/foreground"
                android:background="@drawable/circle_button"
                android:layout_marginStart="8dp" />

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            style="?metaButtonBarButtonStyle"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_button"
            android:gravity="center"
            android:text="@string/button_next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>