<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.github.sofiman.inventory.ui.intro.PrivacyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/privacy_header"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:background="@drawable/liquid_header"
            android:backgroundTint="@color/colorAccent"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cube_scan" />

            <TextView
                android:id="@+id/app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/transparent"
                android:gravity="top|center_horizontal"
                android:keepScreenOn="true"
                android:text="@string/app_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16sp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/privacy_header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="@string/privacy_join_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:gravity="center_horizontal"
                android:text="@string/privacy_join_desc"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/privacy_join"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_box_ripple"
                android:backgroundTint="@color/popup"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="12dp"
                android:text="@string/privacy_join_button"
                android:textAllCaps="false"
                android:textColor="@color/foreground"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/privacy_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_box_ripple"
                android:backgroundTint="@color/colorAccentTransparent"
                android:backgroundTintMode="src_atop"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="12dp"
                android:text="@string/privacy_skip"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/privacy_policy_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/privacy_policy" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>