<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context="com.github.sofiman.inventory.ui.intro.PresentationFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/app_name"
            android:padding="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/cube_scan"
            app:tint="@color/colorPrimaryDark" />

    </LinearLayout>

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="top|center_horizontal"
        android:keepScreenOn="true"
        android:text="@string/app_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="top|center_horizontal"
        android:keepScreenOn="true"
        android:text="@string/slogan"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/category_vertical_separator_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

        <include layout="@layout/component_inventory_placeholder" />
        <include layout="@layout/component_container_placeholder" />
        <include layout="@layout/component_item_placeholder" />

    </LinearLayout>

</LinearLayout>